# qt-search_engine

./: CMakeLists.txt  readme.md
include/: ConverterJSON.h  InvertedIndex.h  SearchEngine.h  callermain.h  gui.h
json/: answers.json  config.json
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchEngine.cpp  main.cpp
tests/: CMakeLists.txt  InvertedIndex_test.cpp
tests/tests/: ConverterJSON_test.cpp  SearchEngine_test.cpp
